--- a/public/css/main.css
+++ b/public/css/main.css
@@ -48,6 +48,81 @@ textarea {
     height: 200px;
 }
 
+.scale-on-hover { transition: all .2s ease-in-out; }
+.scale-on-hover:hover { font-size: 24px;}
+
+.move-in-bottom {
+    position: relative;
+   -webkit-animation: moveinfrombottom 2s; /* Safari, Chrome and Opera > 12.1 */
+      -moz-animation: moveinfrombottom 2s; /* Firefox < 16 */
+       -ms-animation: moveinfrombottom 2s; /* Internet Explorer */
+        -o-animation: moveinfrombottom 2s; /* Opera < 12.1 */
+           animation: moveinfrombottom 2s;
+       }
+
+.name-heading {
+    position: relative;
+   -webkit-animation: fadein 6s; /* Safari, Chrome and Opera > 12.1 */
+      -moz-animation: fadein 6s; /* Firefox < 16 */
+       -ms-animation: fadein 6s; /* Internet Explorer */
+        -o-animation: fadein 6s; /* Opera < 12.1 */
+           animation: fadein 6s;
+}
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+/* Internet Explorer */
+@-ms-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+    from { width: 0%; }
+    to   { width: 100%; }
+}
+
+@keyframes moveinfrombottom {
+    from { bottom: -500px; }
+    to   { bottom: 0px; }
+}
+/* Firefox < 16 */
+@-moz-keyframes moveinfrombottom {
+    from { bottom: -500px; }
+    to   { bottom: 0px; }
+}
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes moveinfrombottom {
+    from { bottom: -500px; }
+    to   { bottom: 0px; }
+}
+/* Internet Explorer */
+@-ms-keyframes moveinfrombottom {
+    from { bottom: -500px; }
+    to   { bottom: 0px; }
+}
+/* Opera < 12.1 */
+@-o-keyframes moveinfrombottom {
+    from { bottom: -500px; }
+    to   { bottom: 0px; }
+}
+
 /* Turn off parallax scrolling for tablets and phones */
 @media only screen and (max-device-width: 1024px) {
     .bgimg-1, .bgimg-2, .bgimg-3 {
