--- a/public/css/main.css
+++ b/public/css/main.css
@@ -129,3 +129,111 @@ textarea {
         background-attachment: scroll;
     }
 }
+
+
+
+/* NIKOLAI JULEGAVE */
+
+
+
+.christmas-content h1 {
+  color: #1d1f3f;
+  font-family: cursive;
+  text-align: center;
+  font-size: 70px;
+  margin-top: 50px;
+  font-weight: 600;
+  line-height: 90px;
+}
+
+.christmas-content img {
+  display: block;
+  margin: auto;
+  margin-bottom: 15px;
+}
+
+.christmas-content p {
+  text-align: center;
+  font-family: serif;
+  color: #1d1f3f;
+  margin: 0;
+  text-transform: uppercase;
+  font-size: 12px;
+  line-height: 26px;
+  padding: 0 10px;
+}
+
+.christmas-content .text-box {
+  max-width: 500px;
+  margin: auto;
+  display: block;
+}
+.christmas-content .text-box p {
+  font-size: 20px;
+}
+
+
+.christmas {
+		  margin: 0;
+		  overflow: hidden;
+		  background-color: black;
+		}
+
+		.scene {
+		  width: 100%;
+		  height: 100%;
+		  position: fixed;
+		  top: 0;
+		  left: 0;
+      display: none;
+		}
+
+		.credits {
+		  position: fixed;
+		  bottom: 10px;
+		  right: 10px;
+		  max-width: 250px;
+		  z-index: 10;
+		  text-align: right;
+		}
+
+		a {
+		  display: block;
+		  padding: 2px 0;
+		  color: #1d1f3f;
+		  text-decoration: none;
+		  font-family: Helvetica, Verdana, sans-serif;
+		  font-size: 15px;
+		}
+
+		a:hover {
+		  text-decoration: underline;
+		}
+
+		.gift.hidden {
+		  display: none;
+		}
+
+		.gift {
+		  position: fixed;
+		  top: 0;
+		  left: 0;
+		  width: 100%;
+		  height: 100%;
+		  background: black;
+		  cursor: pointer;
+		}
+
+		.gift svg {
+		  width: 100%;
+		  height: 100%;
+		}
+
+    @media only screen and (max-width: 600px) {
+      .christmas-content h1 {
+        margin-top: 30px;
+        font-size: 55px;
+        line-height: 60px;
+        margin-bottom: 20px;
+      }
+    }
